# confirm-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
go/: README.md  confirm.go  confirm_test.go  go.mod
rust/: Cargo.toml  README.md
rust/src/: lib.rs
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
typescript/test/: index.test.ts
