[package]
name = "confirm-service-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for Confirm requester applications"
repository = "https://github.com/jkassis/confirm-sdk"
readme = "README.md"
keywords = ["confirm", "confirmation", "sdk", "jwt"]
categories = ["authentication", "api-bindings"]

[dependencies]
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
rsa = { version = "0.9", features = ["pem", "sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
http = ["dep:reqwest"]

[dev-dependencies]
axum = "0.7"
jsonwebtoken = "9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
